# routes/users.js
@@ -2,7 +2,8 @@ const routes = require("express").Router();
 const usersController = require("../controllers/user");
 
 routes.post("/", usersController.registerUser);
-routes.put("/:userId", usersController.updateUser);
-routes.delete("/userId", usersController.deleteUser);
+routes.put("/:id", usersController.updateUser);
+routes.delete("/:id", usersController.deleteUser);
+routes.get("/", usersController.getUsers);
 
 module.exports = routes;
